--- a/public/css/appStyle.css
+++ b/public/css/appStyle.css
@@ -417,10 +417,48 @@ transform: scale(1.1);
     color: #303030;
     font-weight: 500;
     padding: 20px;
-    width: 450px;
+    width: 600px;
     border:none;
     font-family: 'Rubik', sans-serif;
     margin-left: 60px;
+  }
+
+  .errorMsgBox{
+      background-color: #f8e7e7;
+      border-color: #e23c3c;
+      border-width: 1px;
+      border-style: solid;
+      font-size: 13px;
+      font-family: 'Rubik', sans-serif;
+      font-weight: 500;
+      color: #e23c3c;
+      padding: 15px;
+      border-radius:5px;
+      margin-top: 10px;
+      margin-bottom: 20px;
+      text-align: left;
+      display: none;
+  }
+
+  .successMsgBox{
+    display: none;
+    background-color: #65ca8f;
+    border-color: #0d813a;
+    border-width: 1px;
+    border-style: solid;
+    font-size: 13px;
+    font-family: 'Rubik', sans-serif;
+    font-weight: 500;
+    color: #fff;
+    padding: 10px;
+    border-radius:5px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding: 15px;
+    border-radius:5px;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    text-align: left;
   }
 
   .iconsearch{
