--- a/public/css/appStyle.css
+++ b/public/css/appStyle.css
@@ -5,6 +5,7 @@
   --primaryYellow: #ffe400;
   --borderColor: #f0f0f0;
   --inputBorder: #e0e0e0;
+  --headerBackground: #404257;
 }
 
 html, body {
@@ -144,6 +145,16 @@ html, body {
     color: var(--titleColor);
   }
 
+  .loginform select {
+    border: none;
+    width: 100%;
+    padding: 9px;
+    font-family: 'Rubik', sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+    color: var(--titleColor);
+  }
+
   .loginicon {
       color: var(--inputBorder);
       font-size: 20px;
@@ -267,6 +278,18 @@ transform: scale(1.1);
       cursor: pointer;
   }
 
+  .logoareatop{
+    background-color: #404257;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    padding: 10px 10%;
+    color: #fff;
+    cursor: pointer;
+    justify-content:  space-between;
+    align-items:center;
+}
+
   nav {
       flex: 1;
       text-align: right;
@@ -306,6 +329,18 @@ transform: scale(1.1);
     height: 150px;
   }
 
+  .menuAreaFixed{
+    background-color: var(--headerBackground);
+    border-top-color: var(--primaryRed);
+    border-top-width: 5px;
+    border-top-style: solid;
+    position: fixed;
+    top: 0;
+    z-index: 100;
+    display: none;
+    width:100%;
+  }
+
   .row {
     display: flex;
     align-items: center;
@@ -337,6 +372,19 @@ transform: scale(1.1);
     font-weight: 500;
 }
 
+.dashboard{
+  background-color: var(--primaryYellow);
+  border-radius: 5px;
+  padding: 10px 20px;
+  color: rgb(29, 29, 29);
+  font-size: 13px;
+  font-family: 'Rubik', sans-serif;
+  transition:all .5s;
+  text-decoration: none;
+  margin-left: 15px;
+  font-weight: 500;
+}
+
   .signin a{
     text-decoration: none;
     color: #fff;
@@ -352,6 +400,45 @@ transform: scale(1.1);
     background: #ffe400;
     color: #404257;
   }
+
+  .mainsearchtop{
+    width: 50%;
+    position: relative;
+    background-color: #fff;
+    height: 50px;
+    border-radius: 10px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+  }
+
+  .mainsearchtop button {
+    cursor: pointer;
+    background-color:#e23c3c;
+    border-radius: 7px;
+    color: #fff;
+    border: none;
+    font-family: 'Rubik', sans-serif;
+    font-weight: 500;
+    font-size: 15px;
+    padding: 10px 17px;
+    position: absolute;
+    right: 0;
+    margin-right: 5px;
+  }
+  
+  .mainsearchtop input {
+    background-color: #fff;
+    font-size: 15px;
+    color: #303030;
+    font-weight: 500;
+    padding: 10px;
+    width: 450px;
+    border:none;
+    font-family: 'Rubik', sans-serif;
+    margin-left: 45px;
+  }
+
 
   .mainsearch{
     margin-top: 30px;
@@ -438,23 +525,24 @@ transform: scale(1.1);
       margin-bottom: 20px;
       text-align: left;
       display: none;
+      line-height: 23px;
   }
 
   .successMsgBox{
-    display: none;
-    background-color: #65ca8f;
+    background-color: #0e9647;
     border-color: #0d813a;
     border-width: 1px;
     border-style: solid;
+    line-height: 23px;
     font-size: 13px;
     font-family: 'Rubik', sans-serif;
-    font-weight: 500;
+    font-weight: 400;
     color: #fff;
     padding: 10px;
     border-radius:5px;
     margin-top: 10px;
     margin-bottom: 10px;
-    padding: 15px;
+    padding: 10px;
     border-radius:5px;
     margin-top: 10px;
     margin-bottom: 20px;
@@ -469,6 +557,16 @@ transform: scale(1.1);
     left: 0;
     padding-left: 20px;
   }
+
+  .iconsearchtop{
+    font-size: 20px;
+    color: #d1d1d1;
+    position: absolute;
+    margin-top: 7px;
+    left: 0;
+    padding-left: 20px;
+  }
+
 
   .mainsearch select {
       border: none;  
