--- a/public/css/appStyle.css
+++ b/public/css/appStyle.css
@@ -8,6 +8,9 @@
   --headerBackground: #404257;
   --uniqueBlue: rgb(51, 151, 209);
   --greyTtext: #b5b5b5;
+  --navText: #dfdfdf;
+  --lightTitleColor: #6f7290;
+  --paymentButton: #23bb44;
 }
 
 html, body {
@@ -57,7 +60,275 @@ html, body {
     color: var(--titleColor);
   }
 
+  .cartwindow {
+    display: flex;
+    flex-direction: row;
+    width: 80%;
+    margin: 0px auto;
+    column-gap: 30px;
+  }
+
+  .reviewOrder {
+    font-family: 'Rubik', sans-serif;
+    font-weight: 500;
+    font-size: 17px;
+    padding: 15px;
+    color: var(--primaryRed);
+    background-color: #fff;
+    border-top-color: #fcfcfc;
+    border-top-width: 10px;
+    border-top-style: solid;
+  }
+
+  .stickyCartCount a {
+    text-decoration: none;
+    color:#fff;
+  }
+
+  .stickyCartCount {
+    background-color: var(--primaryRed);
+    padding-top: 30px;
+    padding-bottom: 30px;
+    padding-left: 15px;
+    padding-right: 15px;
+    color: #fff;
+    font-family: 'Rubik', sans-serif;
+    font-weight: 500;
+    font-size: 14px;
+    position: fixed;
+    right: 0;
+    top: 45%;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+  }
+
+  .stickyCartCount .fas {
+    margin-left: 5px;
+    font-size: 25px;
+  }
+
+  .deloptions {
+    display: flex;
+    flex-direction: row;
+    column-gap: 50px;
+    font-family: 'Rubik', sans-serif;
+    font-weight: 500;
+    font-size: 14px;
+    color: var(--primaryRed);
+    margin-top: -20px;
+  }
+
+  .checkdetailsbody {
+    padding: 15px;
+  }
+  
+  .checkdetails .fas {
+    margin-right: 5px; 
+  }
+
+  .checkdetails {
+    margin-bottom: 35px;
+    background-color: var(--segmentBackground);
+    padding: 15px;
+    font-family: 'Rubik', sans-serif;
+    font-weight: 500;
+  }
+
+  .cartwindow .leftcol {
+    flex:2;
+    background-color: #fff;
+    min-height: 400px;
+    border-color: var(--segmentBackground);
+    border-width: 1px;
+    border-style: solid;
+  }
+
+  .leftcartbody img {
+    width: 100px;
+  }
+
+  .leftcartbody h6 {
+    font-family: 'Rubik', sans-serif;
+    font-weight: 500;
+    font-size: 17px;
+  }
+
+  .leftcartbody input {
+    border-color: var(--borderColor);
+    border-width: 1px;
+    border-style: solid;
+    padding: 10px;
+    border-radius: 3px;
+    width: 70px;
+    text-align: center;
+  }
+
+  .leftcartbody .cartAmount {
+    font-family: 'Rubik', sans-serif;
+    font-weight: 600;
+    font-size: 15px;
+    padding: 30px;
+  }
+
+  .leftcartbody a {
+    text-decoration: none;
+    color: var(--primaryRed);
+  }
+
+  .leftcol .leftcartbody {
+    margin: 5px;
+    border-radius: 3px;
+    background-color: #fcfcfc;
+    padding: 5px;
+    color: var(--headerBackground);
+    font-family: 'Rubik', sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between; 
+    margin-bottom: 10px;
+  }
+
+  .leftcol .headercol {
+    background-color: var(--borderColor);
+    padding: 15px;
+    color: var(--headerBackground);
+    font-family: 'Rubik', sans-serif;
+    font-weight: 600;
+    font-size: 14px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+
+  .cartwindow .rightcol {
+    flex:1;
+    background-color: #fff;
+    min-height: 400px;
+    border-color: var(--segmentBackground);
+    border-width: 1px;
+    border-style: solid;
+  }
+
+  .rightcol .headercol {
+    padding: 15px;
+    border-bottom-color: var(--segmentBackground);
+    border-bottom-width: 2px;
+    border-bottom-style: solid;
+    font-family: 'Rubik', sans-serif;
+    font-weight: 600;
+    font-size: 17px;
+    color: var(--primaryRed);
+    padding-left: 20px;
+    padding-right: 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .totalFee {
+    font-weight: 600;
+    font-size: 17px;
+    color: var(--primaryRed);
+  }
+
+  .midwindow .delivery {
+    text-align: right;
+    color: var(--greyTtext);
+    font-weight: 400;
+    font-size: 13px;
+    width: 100px;
+  }
+
+  .checkoutbtn button{
+    background-color: #e23c3c;
+    padding: 15px 25px;
+    border-radius: 5px;
+    color: #fff;
+    font-size: 14px;
+    font-family: 'Rubik', sans-serif;
+    transition:all .5s;
+    text-decoration: none;
+    font-weight: 500;
+    border:none;
+    width: 350px;
+    cursor: pointer;
+}
+
+.paymentinfo {
+  padding-left: 25px;
+  display: flex;
+  flex-direction: row;
+  column-gap: 10px;
+  align-items: center;
+}
+
+.paymentinfo img {
+  width: 100%;
+}
+
+.paymentinfo .fas {
+  margin-right: 5px;
+}
+
+.paymentinfo h6 {
+  font-family: 'Rubik', sans-serif;
+  font-size: 13px;
+  font-weight: 400;
+  color: var(--headerBackground);
+}
+
+.checkoutbtn .fas {
+  margin-left: 5px;
+}
+
+  .checkoutbtn {
+    padding: 25px;
+    text-align: center;
+    border-bottom-color: var(--segmentBackground);
+    border-bottom-width: 1px;
+    border-bottom-style: solid;
+  }
+
+  .rightcol .midwindow {
+    align-items: center;
+    padding-left: 25px;
+    padding-top: 25px;
+    padding-bottom: 25px;
+    padding-right: 15px;
+    border-bottom-color: var(--segmentBackground);
+    border-bottom-width: 1px;
+    border-bottom-style: solid;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    font-family: 'Rubik', sans-serif;
+    font-weight: 500;
+    font-size: 14px;
+    color: var(--headerBackground);
+  }
+
+  .headercol .QtyItem {
+    color: var(--headerBackground);
+  }
+
+  .headercol .fas {
+    margin-right: 5px;
+  }
+
   .productheader{
+    display: flex;
+    font-family: 'Rubik', sans-serif;
+    margin: 20px auto;
+    width: 80%;
+    background-color: #fff;
+    font-weight: 600;
+    align-items: center;
+  }
+
+  .productheaderHome{
     display: flex;
     font-family: 'Rubik', sans-serif;
     margin: 20px auto;
@@ -162,6 +433,12 @@ html, body {
     padding-bottom: 3%;
   }
 
+  .productheader{
+    background-color: var(--segmentBackground);
+    padding-top: 2%;
+    padding-bottom: 2%;
+  }
+
 
   .logintitleheader {
     font-family: 'Rubik', sans-serif;
@@ -215,7 +492,7 @@ html, body {
     font-family: 'Rubik', sans-serif;
     font-size: 14px;
     font-weight: 400;
-    color: var(--titleColor);
+    color: var(--lightTitleColor);
   }
 
   .loginform select {
@@ -225,7 +502,7 @@ html, body {
     font-family: 'Rubik', sans-serif;
     font-size: 14px;
     font-weight: 400;
-    color: var(--titleColor);
+    color: var(--lightTitleColor);
   }
 
   .loginicon {
@@ -327,12 +604,218 @@ html, body {
     margin-bottom: 10px;
   }
 
+  .productBody{
+    background-color: #fcfcfc;
+    padding: 4% 0px;
+  }
+
+  .productBodyContainer {
+    display: flex;
+    column-gap: 40px;
+    width: 80%;
+    margin: 0px auto;
+    background-color: #fff;
+    border-radius: 5px;
+    padding: 60px;
+    -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.09);
+    -moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.09);
+    box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.09);
+  }
+
+  .productBodyCol {
+    flex: 1;
+    line-height: 20px;
+  }
+
+  .productBodyCol span {
+    color: var(--primaryRed);
+    margin-left: 20px;
+  }
+
+  .productBodyCol p {
+    font-family: 'Rubik', sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 25px;
+    color: var(--greyTtext);
+  }
+  .productQty {
+    border-bottom-width: 1px;
+    border-bottom-style: solid;
+    border-bottom-color: var(--borderColor);
+    padding-bottom: 30px;
+    padding-top: 10px;
+    font-family: 'Rubik', sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+    color: var(--lightTitleColor);
+    display: flex;
+    flex-direction: row;
+    column-gap: 20px;
+    align-items: center;
+  }
+
+  .productBuy {
+    border-bottom-width: 1px;
+    border-bottom-style: solid;
+    border-bottom-color: var(--borderColor);
+    padding-bottom: 30px;
+    padding-top: 30px;
+  }
+
+  .productBuy button{
+    background-color: #e23c3c;
+    padding: 15px 25px;
+    border-radius: 5px;
+    color: #fff;
+    font-size: 14px;
+    font-family: 'Rubik', sans-serif;
+    transition:all .5s;
+    text-decoration: none;
+    font-weight: 500;
+    border:none;
+    width: 300px;
+    cursor: pointer;
+}
+
+.recommendProduct {
+  font-family: 'Rubik', sans-serif;
+  font-weight: 500;
+  font-size: 14px;
+  padding-top: 30px;
+}
+
+.recommendProduct .fas {
+  margin-right: 5px;
+}
+
+.recommendProduct a {
+  text-decoration: none;
+  color: var(--headerBackground);
+}
+
+  .productQty a {
+    font-family: 'Rubik', sans-serif;
+    font-weight: 500;
+    font-size: 13px;
+    color: var(--primaryRed);
+    text-decoration: none;
+  }
+
+  .productQty .fas {
+    margin-right: 5px;
+  }
+
+  .productQty input {
+    border-color: var(--borderColor);
+    border-width: 1px;
+    border-style: solid;
+    padding: 10px;
+    border-radius: 3px;
+    width: 70px;
+    text-align: center;
+  }
+
+  .productAmount {
+    border-top-color: var(--borderColor);
+    border-top-width: 1px;
+    border-top-style: solid;
+    border-bottom-width: 1px;
+    border-bottom-style: solid;
+    border-bottom-color: var(--borderColor);
+    color: var(--primaryRed);
+    padding: 20px 0px;
+    font-family: 'Rubik', sans-serif;
+    font-weight: 600;
+    font-size: 28px;
+    margin: 15px 0px;
+  }
+
+  .productBodyCol h6 {
+    font-family: 'Rubik', sans-serif;
+    font-weight: 500;
+    color: var(--headerBackground);
+    font-size: 14px;
+    text-decoration: underline;
+    margin-bottom: -12px;
+  }
+
+  .productBodyCol ul {
+    margin-top: -20px;
+  }
+
+  .productBodyCol ul li{
+    list-style-type: none;    
+    line-height: 25px;
+    color: var(--lightTitleColor);
+    font-family: 'Rubik', sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+    margin-left: -40px;
+  }
+
+  .productBodyCol img {
+    max-width: 80%;
+  }
+
+  .productBodyTitle {
+    font-family: 'Rubik', sans-serif;
+    font-weight: 500;
+    font-size: 25px;
+    color: var(--titleColor);
+  }
+
+  .breadcrumb {
+    font-weight: 400;
+    font-size: 13px;
+    color: #6f7290;
+    font-family: 'Rubik', sans-serif;
+    width: 80%;
+    margin: 3px auto;
+  }
+
+  .breadcrumb a {
+    text-decoration: none;
+    color: #6f7290;
+  }
+
+  .breadcrumb ul {
+    display: inline-block;
+    list-style-type: none;
+    margin-left: -40px;
+  }
+
+  .breadcrumb ul li {
+    display: inline-block;
+    margin-right: 10px;
+    font-size: 15px;
+  }
+
   .innerHeaderTitle{
     text-align: center;
     font-weight: 500;
     font-family: 'Rubik', sans-serif;
     font-size: 28px;
     color: var(--titleColor);
+  }
+
+  .productHeaderTitle{
+    text-align: left;
+    font-weight: 500;
+    font-family: 'Rubik', sans-serif;
+    font-size: 25px;
+    color: var(--titleColor);
+    width: 80%;
+    margin: 0px auto;
+  }
+
+  .productHeaderTitle:after { 
+    content:"";
+    display:block;
+    width: 4em;
+    max-width:70%;
+    border-bottom: 5px solid var(--primaryRed);
+    margin: 18px 0 auto;
   }
 
   .innerHeaderTitle:after { 
@@ -710,6 +1193,175 @@ transform:translate(0px,-4px);
     align-items: center;
   }
 
+  .newsfield{
+    width: 100%;
+    position: relative;
+    background-color: #fff;
+    height: 50px;
+    border-radius: 8px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    margin-left: -90px;
+  }
+
+  .newsfield button {
+    cursor: pointer;
+    background-color:#e23c3c;
+    border-radius: 5px;
+    color: #fff;
+    border: none;
+    font-family: 'Rubik', sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+    padding: 10px 17px;
+    position: absolute;
+    right: 0;
+    margin-right: 5px;
+  }
+  
+  .newsfield input {
+    background-color: #fff;
+    font-size: 14px;
+    color: #303030;
+    font-weight: 500;
+    padding: 10px;
+    width: 450px;
+    border:none;
+    font-family: 'Rubik', sans-serif;
+    padding-left: 45px;
+  }
+
+  .newsletter {
+    display: flex;
+    align-items: center;
+  }
+
+  .newsbody {
+    margin-top: -30px;
+    font-family: 'Rubik', sans-serif;
+    font-weight: 500;
+    color: var(--titleColor);
+    font-size: 15px;
+  }
+
+  .newstitle {
+    margin-top: 10px;
+      font-family: 'Rubik', sans-serif;
+      font-weight: 600;
+      font-size: 22px;
+      color: var(--primaryRed);
+  }
+
+  .newscol1 {
+    flex:1;
+  }
+
+  .newscol2 {
+    flex:1;
+  }
+
+  .newscol2 input {
+    width: 100%;
+  }
+
+  .footerbody {
+    background-color: var(--headerBackground);
+  }
+
+  .footercontent {
+    margin-top: 30px;
+    padding-top: 5%;
+    padding-bottom: 3%;
+    display: flex;
+    margin: 0px auto;
+    width: 80%;
+    justify-content: space-around;
+    column-gap: 10%;
+  }
+
+  .footercolhdr {
+    font-size: 14px;
+    font-weight: 500;
+    color: #ffe400;
+    margin-bottom: 30px;
+    font-family: 'Rubik', sans-serif;
+
+  }
+
+  .footerBottom {
+    border-top-style: solid;
+    border-top-width: 1px;
+    border-top-color: #83848e;
+    margin-top: 10px;
+    padding: 10px 0px;
+    color: var(--navText);
+    font-size: 14px;
+    font-family: 'Rubik', sans-serif;
+    font-weight: 400;
+  }
+
+  .footerSocial a {
+    text-decoration: none;
+    color: var(--navText);
+  }
+
+  .footerSocial a:hover {
+    color: var(--primaryRed);
+  }
+
+  .footerSocial ul li { 
+      display: inline-block;
+      margin-right: 15px;
+      font-style: 35px;
+  }
+
+  .paymentypes li {
+    display: inline-block;
+    margin-right: 15px;
+  }
+
+  .paymentypes{
+    margin-left: 25px;
+  }
+
+
+  .footercol a {
+    text-decoration: none;
+    color: var(--navText);
+  }
+
+  .footercol a:hover {
+    color: var(--primaryRed);
+  }
+
+  .footercol p {
+    font-size: 13px;
+    font-weight: 300;
+    color: var(--navText);
+    line-height: 20px;
+    font-family: 'Rubik', sans-serif;
+  }
+
+  .footercol ul {
+    line-height: 25px;
+    margin-left: -40px;
+    font-size: 13px;
+    font-family: 'Rubik', sans-serif;
+    color: var(--navText);
+    list-style-type: none;
+    font-weight: 400;
+  }
+
+  .footercol .fas {
+    margin-right: 10px;
+  }
+
+  .footercol {
+    flex: 1;
+    width: 25%;
+  }
+
   .mainsearchtop button {
     cursor: pointer;
     background-color:#e23c3c;
@@ -780,8 +1432,6 @@ transform:translate(0px,-4px);
     color:#222d3d;
   }
   
-  
-
   .topleads{ 
     background-color: #fcfcfc;
   }
@@ -823,6 +1473,12 @@ transform:translate(0px,-4px);
       text-align: left;
       display: none;
       line-height: 23px;
+  }
+
+  .infoMsgBox a {
+    text-decoration: none;
+    color: var(--primaryRed);
+    font-size: 14px;
   }
 
   .infoMsgBox{
@@ -907,14 +1563,23 @@ transform:translate(0px,-4px);
     padding-left: 20px;
   }
 
+  .iconnews{
+    font-size: 20px;
+    color: #d1d1d1;
+    position: absolute;
+    margin-top: 3px;
+    left: 0;
+    padding-left: 10px;
+  }
+
 
   .mainsearch select {
       border: none;  
       font-family: 'Rubik', sans-serif;
       font-size: 17px;
-    font-weight: 500;
-    width: 150px;
-    columns: #6b6b6b;
+      font-weight: 500;
+      width: 150px;
+      columns: #6b6b6b;
   }
 
   .mainsearch button {
